--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "targetUrl": "https://greendotball.com/?utm_source=herody&utm_medium=29",
-  "headless": false,
+  "headless": true,
   "slowMo": 100,
   "timeout": 30000,
   "retryAttempts": 3,
@@ -16,7 +16,15 @@
     "9582142584",
     "8700713861",
     "9942822317",
-    "9994705656"
+    "9994705656",
+   "9910311411",
+   "7971087010",
+   "9661109430",
+   "7011339984",
+   "7065001135",
+   "7678281041",
+   "9582142584",
+   "8700713861"
   ],
   "images": [
     "./data/sample-images/img-1.png",
@@ -33,7 +41,28 @@
     "./data/sample-images/img-12.jpg",
     "./data/sample-images/img-13.jpg",
     "./data/sample-images/img-14.jpg",
-    "./data/sample-images/img-15.jpg"
+    "./data/sample-images/img-15.jpg",
+    "./data/sample-images/Green apple.jpg",
+    "./data/sample-images/greeb ball garden (1).jpg",
+    "./data/sample-images/green cabbage 2 (1).jpg",
+    "./data/sample-images/green orange in hand 2 (1).jpg",
+    "./data/sample-images/green tennis ball in red court.jpg",
+    "./data/sample-images/tennis ball with racket.jpg",
+    "./data/sample-images/Green double tennis ball.jpg",
+    "./data/sample-images/greeb ball garden (1)_1.jpg",
+    "./data/sample-images/green leaves balls (1).jpg",
+    "./data/sample-images/green orange.jpg",
+    "./data/sample-images/green vector 1.jpg",
+    "./data/sample-images/Green vector.jpg",
+    "./data/sample-images/green birds in round (1).jpg",
+    "./data/sample-images/green oragnes (1).jpg",
+    "./data/sample-images/green round object in sky (1).jpg",
+    "./data/sample-images/green veg.jpg",
+    "./data/sample-images/Tennis ball.jpg",
+    "./data/sample-images/green cabbage (1).jpg",
+    "./data/sample-images/green orange in hand (1).jpg",
+    "./data/sample-images/green tennis ball in grass.jpg",
+    "./data/sample-images/tennis ball in supermarket (1).jpg"
   ],
   "imagePath": "./data/sample-images/img-1.png",
   "utmParams": {
