Update for 49 instances deployment
- New AMI: ami-078e1c49f563afde5
- Updated mobile numbers: 49 entries
- Changed UTM medium from 29 to 28
- Cleaned up config.json images list

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "targetUrl": "https://greendotball.com/?utm_source=herody&utm_medium=29",
+  "targetUrl": "https://greendotball.com/?utm_source=herody&utm_medium=28",
   "headless": true,
   "slowMo": 100,
   "timeout": 30000,
@@ -27,42 +27,7 @@
    "8700713861"
   ],
   "images": [
-    "./data/sample-images/img-1.png",
-    "./data/sample-images/img-2.png",
-    "./data/sample-images/img-3.png",
-    "./data/sample-images/img-4.jpg",
-    "./data/sample-images/img-5.jpg",
-    "./data/sample-images/img-6.jpg",
-    "./data/sample-images/img-7.jpg",
-    "./data/sample-images/img-8.jpg",
-    "./data/sample-images/img-9.jpg",
-    "./data/sample-images/img-10.jpg",
-    "./data/sample-images/img-11.jpg",
-    "./data/sample-images/img-12.jpg",
-    "./data/sample-images/img-13.jpg",
-    "./data/sample-images/img-14.jpg",
-    "./data/sample-images/img-15.jpg",
-    "./data/sample-images/Green apple.jpg",
-    "./data/sample-images/greeb ball garden (1).jpg",
-    "./data/sample-images/green cabbage 2 (1).jpg",
-    "./data/sample-images/green orange in hand 2 (1).jpg",
-    "./data/sample-images/green tennis ball in red court.jpg",
-    "./data/sample-images/tennis ball with racket.jpg",
-    "./data/sample-images/Green double tennis ball.jpg",
-    "./data/sample-images/greeb ball garden (1)_1.jpg",
-    "./data/sample-images/green leaves balls (1).jpg",
-    "./data/sample-images/green orange.jpg",
-    "./data/sample-images/green vector 1.jpg",
-    "./data/sample-images/Green vector.jpg",
-    "./data/sample-images/green birds in round (1).jpg",
-    "./data/sample-images/green oragnes (1).jpg",
-    "./data/sample-images/green round object in sky (1).jpg",
-    "./data/sample-images/green veg.jpg",
-    "./data/sample-images/Tennis ball.jpg",
-    "./data/sample-images/green cabbage (1).jpg",
-    "./data/sample-images/green orange in hand (1).jpg",
-    "./data/sample-images/green tennis ball in grass.jpg",
-    "./data/sample-images/tennis ball in supermarket (1).jpg"
+    "./data/sample-images/img-1.png"
   ],
   "imagePath": "./data/sample-images/img-1.png",
   "utmParams": {
